# ManifestWASM

./: .gitignore  Cargo.toml  README.md
src/: error.rs  helper.rs  lib.rs  reader.rs  writer.rs
src/manifest/: chunk_info.rs  chunk_list.rs  chunk_part.rs  custom_fields.rs  file_manifest.rs  file_manifest_list.rs  header.rs  meta.rs  mod.rs  shared.rs
src/manifest/chunks/: chunk_header.rs  mod.rs
