[package]
name = "epic_manifest_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Needed for wasm

[dependencies]
epic_manifest_parser_rs = "0.1"
wasm-bindgen = "0.2"

# Use the pure Rust backend for flate2 (in case it's a transitive dep)
flate2 = { version = "1", default-features = false, features = [
    "rust_backend",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha1 = "0.10.6"
widestring = "1.0.2"
